WIP Fix quickjump animation

--- a/app/styles/views/_quick-jump.scss
+++ b/app/styles/views/_quick-jump.scss
@@ -7,10 +7,10 @@
   > div > div {
     bottom: 0;
     left: $nav-width;
-    position: absolute;
+    overflow-y: scroll;
+    position: fixed;
     right: 0;
     top: $header-height;
-    overflow-y: scroll;
 
     .overlay {
       background-color: #000000;
